# model-service

./: .gitignore  Dockerfile  README.md  config.ini  pyproject.toml
.github/workflows/: action.yml
app/: main.py
app/api/: __init__.py  health.py  prediction.py
app/core/: app.py  config.py  event_handlers.py  security.py
app/models/: payload.py  prediction.py
app/services/: model_service.py
app/utils/: get_model.py  logging.py
